tests/compile_fail/bind_function_removed.cpp
#include <ptn/patternia.hpp>

int main() {
  auto p = ptn::bind();
  (void)p;
  return 0;
}
